package com.example.mybankapp;

public class Constants {
    public final static String PARAM_debitCard = "debit card";
    public final static String PARAM_creditCard = "credit card";
    public final static String PARAM_creditCash = "credit cash";
    public final static String PARAM_forForeigners = "for foreigners";
    public final static String PARAM_mortgage = "mortgage";
    public final static String PARAM_deposit = "deposit";
    public final static String PARAM_insurance = "insurance";
    public final static String PARAM_investments= "investments";
    public final static String PARAM_forPrivatePerson = "for private";
    public final static String PARAM_forLegal = "for legal";
    public final static String PARAM_city= "city";
    public final static String PARAM_city_status= "city status";
    public final static String PARAM_FILTER_CHANGED = "filter changed";
    public final static String PARAM_SWITCH_TYPE = "switch type";
    public final static int PARAM_DEFAULT = 0;
    public final static int PARAM_SWITCH_TYPE_FILTER_FRAGMENT = 1;
    public final static int PARAM_SWITCH_TYPE_ITEM_FRAGMENT = 2;
    public final static int PARAM_SWITCH_TYPE_REQUEST_FRAGMENT = 3;
    public final static int PARAM_SWITCH_TYPE_REQUEST_ADDED = 4;
    public final static String PARAM_BUNDLE_NAME = "bank name";
    public final static String PARAM_BUNDLE_IMG = "bank image path";
    public final static String PARAM_BUNDLE_LICENSE = "bank license";
    public final static String PARAM_BUNDLE_OGRN = "bank ogrn";
    public final static String PARAM_BUNDLE_ADRESS = "bank adress";
    public final static String PARAM_BUNDLE_SITE = "bank site";
    public final static String PARAM_BUNDLE_MAP = "bank location";
    public final static String PARAM_BUNDLE_CITY = "bank city";

}
