@startuml

title __APP's Class Diagram__\n

  namespace com.example.mybankapp {
    class com.example.mybankapp.fragments.AddRequestFragment {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.classes.BankClass {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.BuildConfig {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.constants.Constants {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.fragments.FilterFragment {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.fragments.ItemFragment {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.fragments.ListFragment {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.activities.MainActivity {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.adapters.BankListAdapter {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.classes.BankListRecyclerItem {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.classes.RequestListRecyclerItem {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.fragments.RequestFragment {
    }
  }
  

  namespace com.example.mybankapp {
    class com.example.mybankapp.adapters.RequestListAdapter {
    }
  }
  

  com.example.mybankapp.fragments.AddRequestFragment -up-|> androidx.fragment.app.Fragment
  com.example.mybankapp.fragments.FilterFragment -up-|> androidx.fragment.app.Fragment
  com.example.mybankapp.fragments.ItemFragment -up-|> androidx.fragment.app.Fragment
  com.example.mybankapp.fragments.ListFragment -up-|> androidx.fragment.app.Fragment
  com.example.mybankapp.activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.mybankapp.activities.MainActivity o-- com.example.mybankapp.fragments.AddRequestFragment : addRequestFragment
  com.example.mybankapp.activities.MainActivity o-- com.example.mybankapp.fragments.FilterFragment : filterFragment
  com.example.mybankapp.activities.MainActivity o-- com.example.mybankapp.fragments.ItemFragment : itemFragment
  com.example.mybankapp.activities.MainActivity o-- com.example.mybankapp.fragments.ListFragment : listFragment
  com.example.mybankapp.activities.MainActivity o-- com.example.mybankapp.fragments.RequestFragment : requestFragment
  com.example.mybankapp.adapters.BankListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.mybankapp.fragments.RequestFragment -up-|> androidx.fragment.app.Fragment
  com.example.mybankapp.adapters.RequestListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
